--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
    <body>
       <h1>Gaizgrol</h1>
-      <p>My GitHub site!</p>
+      <h3>Site em construção!</h3>
+      <h5>Entre em contato:</h5>
+      <h5>Facebook: https://www.facebook.com/gabriel.izoton</h5>
+      <h5>Twitter: https://twitter.com/gabrielizoton</h5>
    </body>
 </html>
