--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
    <body>
       <h1>Gaizgrol</h1>
-      <h3>Site em construção!</h3>
-      <h5>Entre em contato:</h5>
-      <h5>Facebook: https://www.facebook.com/gabriel.izoton</h5>
-      <h5>Twitter: https://twitter.com/gabrielizoton</h5>
+      <h3>Site em construcao!</h3>
+      
+      <h5>Entre em contato:<br>
+		<a href="https://www.facebook.com/gabriel.izoton">Facebook</a>
+		<a href="https://twitter.com/gabrielizoton">Twitter</a>
+      </h5>
    </body>
 </html>
