Troquei link dos projetos de java

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       
       <h3>Projetos:</h3>
       <a href="https://gaizgrol.github.io/c.html">-Projetos em C</a><br>
-      <a href="https://gaizgrol.github.io/c.html">-Projetos em Java</a>
+      <a href="https://gaizgrol.github.io/java.html">-Projetos em Java</a>
       
       <br>
       <br>
