Pagina nova, link para home
Pagina de projetos de Python 2.7 adicionada
"Gaizgrol" manda pra pagina inicial

--- a/java.html
+++ b/java.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <h1>Gaizgrol</h1>
+      <h1><a href="https://gaizgrol.github.io">Gaizgrol</a></h1>
       <h3>Site em construcao!</h3>
       
       <h3>Projetos em Java:</h3>
