--- a/python27.html
+++ b/python27.html
@@ -4,7 +4,7 @@
       <h1><a href="https://gaizgrol.github.io">Gaizgrol</a></h1>
       <h3>Site em construcao!</h3>
       
-      <h3>Projetos em C:</h3>
+      <h3>Projetos em Python 2.7:</h3>
       <h4>(links pendentes)</h4>
       
       <br>
