Link para projeto em Java
- Projeto de manipulação de imagens adicionado

--- a/java.html
+++ b/java.html
@@ -5,8 +5,7 @@
       <h3>Site em construcao!</h3>
       
       <h3>Projetos em Java:</h3>
-      <h4>(links pendentes)</h4>
-      
+      <h4><a href="https://github.com/Gaizgrol/ImageManipulation">- Manipulacao de Imagens (.ppm)</a></h4>
       <br>
       <br>
       <h5>Entre em contato:<br>
