Alterada a cor do site

--- a/c.html
+++ b/c.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-   <body>
-      <h1><a href="https://gaizgrol.github.io">Gaizgrol</a></h1>
-      <h3>Site em construcao!</h3>
+   <body bgcolor = 7190c0>
+      <h1><a href="https://gaizgrol.github.io" style="color: #eeeeff" >Gaizgrol</a></h1>
+      <h3><font color=ff0000>Site em construcao!</font></h3>
+
+        <hr color = eeeeff>
       
       <h3>Projetos em C:</h3>
-      <h4>(links pendentes)</h4>
+      <h4><font color=ff3f3f>(links pendentes)</font></h4>
       
       <br>
       <br>
+        <hr color = eeeeff>
       <h5>Entre em contato:<br>
-		<a href="https://www.facebook.com/gabriel.izoton">Facebook</a>
-		<a href="https://twitter.com/gabrielizoton">Twitter</a>
+		<a href="https://www.facebook.com/gabriel.izoton" style="color: #c0d0ff">Facebook</a>
+		<a href="https://twitter.com/gabrielizoton" style="color: #c0d0ff">Twitter</a><br><br>
+        <font color = eeeeff>gabrielizotongo@gmail.com</font>
       </h5>
    </body>
 </html>
