--- a/java.html
+++ b/java.html
@@ -7,7 +7,9 @@
         <hr color = eeeeff>
         
       <h3>Projetos em Java:</h3>
-      <h4><a href="https://github.com/Gaizgrol/ImageManipulation" style="color: #c0d0ff">- Manipulacao de Imagens (.ppm)</a></h4>
+      <h4><font color=eeeeff>- Manipulacao de Imagens (.ppm)</font><br>
+      <a href="https://github.com/Gaizgrol/ImageManipulation" style="color: #c0d0ff">[ Pagina no GitHub ]</a>
+      <a href="https://github.com/Gaizgrol/ImageManipulation/archive/master.zip" style="color: #c0d0ff">[ Download ]</a></h4>
       
       <br>
       <br>
