Projeto em C adicionado
SDL2AnalogClock adicionado à lista

--- a/c.html
+++ b/c.html
@@ -7,7 +7,9 @@
         <hr color = eeeeff>
       
       <h3>Projetos em C:</h3>
-      <h4><font color=ff3f3f>(links pendentes)</font></h4>
+      <h4><font color=eeeeff>- Relógio analógico utilizando SDL2</font><br>
+      <a href="https://github.com/Gaizgrol/SDL2AnalogClock" style="color: #c0d0ff">[ Pagina no GitHub ]</a>
+      <a href="https://github.com/Gaizgrol/SDL2AnalogClock/archive/master.zip" style="color: #c0d0ff">[ Download ]</a></h4>
       
       <br>
       <br>
