--- a/jogos/test/test.html
+++ b/jogos/test/test.html
@@ -15,6 +15,7 @@
 	<body class="centered">
 
 		<canvas id="gameScreen"></canvas>
+		<canvas id="game3dScreen"></canvas>
 		<script type="text/javascript" src="gameLogic.js"></script>
 
 		<br>
