--- a/jogos/test/test.html
+++ b/jogos/test/test.html
@@ -14,6 +14,10 @@
 
 	<body class="centered">
 
+		<div style="display:none;">
+			<img id="textureWall" src="textures/wall.png" width="16" height="16">
+		</div>
+
 		<canvas id="gameScreen"></canvas>
 		<canvas id="game3dScreen"></canvas>
 		<script type="text/javascript" src="gameLogic.js"></script>
