--- a/jogos/test/test.html
+++ b/jogos/test/test.html
@@ -19,7 +19,7 @@
 			<img id="textureWall" src="textures/wall.png" width="16" height="16">
 			<img id="textureLeft" src="textures/handLeft.png" width="32" height="32">
 			<img id="textureRight" src="textures/handRight.png" width="32" height="32">
-			<img id="textureGunFire" src="textures/gunFire.png" width="32" height="32">
+			<img id="textureStaff" src="textures/staff.png" width="32" height="32">
 		</div>
 
 		<canvas id="game3dScreen"></canvas>
