+dá p pintar o grid

--- a/astar/astar.html
+++ b/astar/astar.html
@@ -14,10 +14,19 @@
 
 	<body class="centered">
 
-		<canvas id="grid"></canvas>
+		<canvas id="grid""></canvas>
+
+		<br>
+
+		 <select id="menu" name="menu">
+			<option value="empty">Vazio</option>
+			<option value="block">Parede</option>
+			<option value="start">Inicio</option>
+			<option value="end">Fim</option>
+		</select>
+
 		<script type="text/javascript" src="astar.js"></script>
 		
 	</body>
-
 
 </html>
