#talvez compatibilidade com touch

--- a/astar/astar.html
+++ b/astar/astar.html
@@ -25,6 +25,8 @@
 			<option value="end">Fim</option>
 		</select>
 
+		<button>Isso n faz nd</button>
+
 		<script type="text/javascript" src="astar.js"></script>
 		
 	</body>
