--- a/astar/astar.html
+++ b/astar/astar.html
@@ -7,7 +7,7 @@
 
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="astar.css">
-		<title>test</title>
+		<title>A* Pathfinding</title>
 
 	</head> 
 
@@ -25,7 +25,7 @@
 			<option value="end">Fim</option>
 		</select>
 
-		<button>Isso n faz nd</button>
+		<button id="update">Atualizar</button>
 
 		<script type="text/javascript" src="astar.js"></script>
 		
