+seleção de vizinhos e criação de caminhos

--- a/nav/nav.html
+++ b/nav/nav.html
@@ -5,21 +5,20 @@
 
 	<head>
 
-		<meta charset="UTF-8" />
-		<link rel="stylesheet" type="text/css" href="astar.css">
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="nav.css">
 		<title>Navegação utilizando A*</title>
 
 	</head> 
 
 
-	<body class="centered">
+	<body>
 
 		<canvas id="view"></canvas>
 
 		<br>
 
-		<script type="module" src="vec2.js"></script>
-		<script type="module" src="nav.js"></script>
+		<script type="text/javascript" src="nav.js"></script>
 		
 	</body>
 
