--- a/terrain/terrain.html
+++ b/terrain/terrain.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8" property="og:image" content="data/preview.png" />
         <link rel="stylesheet" type="text/css" href="terrain.css">
         <title>Terrain</title>
 
