--- a/terrain/terrain.html
+++ b/terrain/terrain.html
@@ -3,9 +3,10 @@
 
     <head>
 
-        <meta charset="UTF-8" property="og:image" content="data/preview.png" />
+        <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="terrain.css">
         <title>Terrain</title>
+        <meta property="og:image" content="data/preview.png"/>
 
     </head>
 
