--- a/terrain/terrain.html
+++ b/terrain/terrain.html
@@ -3,10 +3,13 @@
 
     <head>
 
-        <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="terrain.css">
         <title>Terrain</title>
-        <meta property="og:image" content="data/preview.png"/>
+
+        <meta property="og:title" content="Terrain" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://gaizgrol.github.io/terrain/terrain" />
+		<meta property="og:image" content="https://gaizgrol.github.io/terrain/data/preview.png" />
 
     </head>
 
