--- a/terrain/terrain.html
+++ b/terrain/terrain.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="Terrain" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://gaizgrol.github.io/terrain/terrain" />
-		<meta property="og:image" content="https://gaizgrol.github.io/terrain/data/preview.png" />
+		<meta property="og:image" content="https://gaizgrol.github.io/terrain/data/preview.PNG" />
 
     </head>
 
