--- a/terrain/terrain.html
+++ b/terrain/terrain.html
@@ -3,9 +3,10 @@
 
     <head>
 
+    	<meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="terrain.css">
         <title>Terrain</title>
-
+        <img src="data/preview.PNG">
         <meta property="og:title" content="Terrain" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://gaizgrol.github.io/terrain/terrain" />
